--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,8 +1,39 @@
 body {
-    background-image: url('/Assets/images/large-logo.png');
+    background-image: url('/Assets/');
     background-repeat: repeat;
     background-size: auto;
   }
   .content {
     background-color: rgba(255, 255, 255, 0.5);
+  }
+
+  @import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
+  .search {
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+  }
+  
+
+
+  .searchTerm {
+    width: 75%;
+    padding: 1%;
+  }
+
+  .container {
+
+  }
+
+  .searchButton {
+    height: 47px;
+    width: 40px;
+    border: 1px solid black;
+    background: royalblue;
+    text-align: center;
+    color: #fff;
+    cursor: pointer;
+    font-size: 20px;
   }
